--- a/TicketSystem/App.xaml
+++ b/TicketSystem/App.xaml
@@ -1,9 +1,15 @@
 ﻿<Application x:Class="TicketSystem.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:TicketSystem"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:TicketSystem">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary>
+                    <!--Start application from bootstrapper-->
+                    <local:Bootstrapper x:Key="Bootstrapper"/>
+                </ResourceDictionary>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
