--- a/TicketSystem/Views/ShellView.xaml
+++ b/TicketSystem/Views/ShellView.xaml
@@ -27,10 +27,14 @@
             <RowDefinition Height="20" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        
+
         <!--Row 2 Combo box Binds to Selected ticket from form to source-->
         <ComboBox x:Name="Tickets" Grid.Row="2" Grid.Column="1"
                   SelectedItem="{Binding Path=SelectedTicket, Mode=OneWayToSource}"
                   DisplayMemberPath="Name" MinWidth="120" SelectedIndex="0"/>
+        <TextBlock Grid.Row="2" Grid.Column="2" x:Name="SelectedTicket_Price"/>
+
+        <Button Grid.Row="3" Grid.Column="1" Content="Add Tour" x:Name="AddTour"/>
+        <TextBlock Grid.Row="3" Grid.Column="2" x:Name="TourPrice"/>
     </Grid>
 </Window>
